Update
Cleanup
Update Skinsrestorer hook to 1.15.x
Back to Java8 compatibility
Update dependencies